ecs.tf
resource "aws_ecs_cluster" "ecs_cluster" {
  name = "${var.project}-${var.environment}-ecs-cluster"
}

resource "aws_ecs_task_definition" "ecs_task_definition" {
  family                   = "${var.project}-${var.environment}-ecs-task-definition"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = 256
  memory                   = 512
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn
  container_definitions = jsonencode([
    {
      name      = "${var.project}-${var.environment}-container"
      image     = "${aws_ecr_repository.ecr_repository.repository_url}:latest"
      essential = true
      portMappings = [
        {
          protocol      = "tcp"
          containerPort = 80
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          awslogs-group         = aws_cloudwatch_log_group.ecs_logs.name
          awslogs-region        = "ap-northeast-1"
          awslogs-stream-prefix = "ecs"
        }
      }
      secrets = [
        {
          name      = "SECRET_KEY_BASE"
          valueFrom = "${var.secret_manager_arn}:SECRET_KEY_BASE::"
        },
        {
          name      = "DB_NAME"
          valueFrom = "${var.secret_manager_arn}:DB_NAME::"
        },
        {
          name      = "DB_USER"
          valueFrom = "${var.secret_manager_arn}:DB_USER::"
        },
        {
          name      = "DB_PASSWORD"
          valueFrom = "${var.secret_manager_arn}:DB_PASSWORD::"
        }
      ]
      environment = [
        {
          name  = "DB_HOST"
          value = var.db_host
        },
        {
          name  = "RAILS_ENV"
          value = "production"
        },
        {
          name  = "AWS_BUCKET"
          value = aws_s3_bucket.s3_bucket.bucket
        },
        {
          name  = "RAILS_SERVE_STATIC_FILES"
          value = "true"
        },
      ]
    }
  ])
}

resource "aws_ecs_service" "ecs_service" {
  name            = "${var.project}-${var.environment}-ecs-service"
  cluster         = aws_ecs_cluster.ecs_cluster.id
  task_definition = aws_ecs_task_definition.ecs_task_definition.arn
  #使わないとき0にしておく
  desired_count                     = 2
  launch_type                       = "FARGATE"
  platform_version                  = "1.4.0"
  health_check_grace_period_seconds = 60

  network_configuration {
    assign_public_ip = true
    security_groups = [
      aws_security_group.app_sg.id
    ]
    subnets = [
      aws_subnet.public_subnet_1a.id,
      aws_subnet.public_subnet_1c.id
    ]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.alb_target_group.arn
    container_name   = "${var.project}-${var.environment}-container"
    container_port   = 80
  }
}
